--- a/uttam.html
+++ b/uttam.html
@@ -22,7 +22,7 @@ body {
 
 #container { width:1500px; height:1200px; border:1px solid blue; background:silver;}
 #header    { width:100%; height:50px; background:Blue;}
-#input     { width:100%;height:50px; text-align:center;padding:10px;font-size: 17px; border: 1px solid grey; float: left; width: 80%; box-sizing: border-box;}
+#input     { width:100%;height:50px; text-align:center;padding:10px;font-size: 17px; border: 1px solid grey; float: left; width: 80%; box-sizing:}
 
 #content { width:100%; min-height:500px; overflow:auto; background:offwhite;}
 
