--- a/uttam.html
+++ b/uttam.html
@@ -22,7 +22,7 @@ body {
 
 #container { width:1500px; height:1200px; border:1px solid blue; background:silver;}
 #header    { width:100%; height:50px; background:Blue;}
-#input     { width:100%;height:50px; text-align:center;padding:10px;font-size: 17px; border: 1px solid grey; float: left; width: 80%; box-sizing:}
+#input     { width:100%;height:50px; text-align:center;padding:10px;font-size: 17px; border: 1px solid grey; float: left; width: 80%; box-sizing: border-box;}
 
 #content { width:100%; min-height:500px; overflow:auto; background:offwhite;}
 
@@ -50,7 +50,7 @@ body {
 <div id='container'>
 	<div id='header'>
 		<div id = input> 
-			 <input type="text" placeholder="Search.." name="search">
+			 <input type="text" placeholder="Search.." name="search" style="width: 50%;">
 			 <button type="submit"><i class="fa fa-search"></i></button>
 			
 		<!--<nav class="navbar navbar-inverse">
